# Argus

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION.md  Dockerfile.security-ai  MERN_WEBSITE_PLAN.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Project Notes/: 00_-_Project_Vision.md  01_-_System_Architecture.md  AI Agent.md  AI Engine.md  Architecture & Blueprint.md  Architecture.md  Autonomous_Response.md  Blueprint.md  Contracts.md  Decision Engine.md  Decision_Engine.md  Deployment.md  Deployment_and_Hosting_Guide.md  Detection & Investigation.md  Endpoints.md  Event_Bus.md  Investigation.md  MVP.md  MVP_Scope.md  Market_Analysis.md  Monitoring.md  OpenTelemetry.md  Outcomes.md  Project_Outcomes_and_Implementation_Plan.md  Quickstart_Instructions.md  Response Agent.md  Response.md  Risk Agent.md  Risk Engine.md  Security_AI_Agent.md  Strategy.md  Telemetry Layer.md  Telemetry.md  Threat_Intelligence_Agent.md  Training.md  Vision.md  eBPF.md
Project Notes/.obsidian/: graph.json  workspace.json
Project_checkpoints/: 0001 Kickoff.md  0002_python_security_ai_scaffold.md  0003 Ollama AI.md  0004 Direction.md  0005 Contracts.md  0005_shared_contracts_and_scenarios.md  0006 Pipeline.md  0007 Demo.md  0008 Website.md  0008_mern_website_scaffold.md  0009 UIUX.md  0010_b2b_pivot_and_custom_foundation_model.md  0011 Deployment.md  0012 Enterprise.md  0013 Security.md  0014 Dashboard.md  0015 Training.md  0016 Production Telemetry.md  0017 Final Integration.md  0017 Future Roadmap.md  0018 Pre-Hackathon Fixes.md  0019 Windows and CUDA Fixes.md  PROJECT_SUMMARY.md  Phase 1 - Prototyping and Core AI.md  Phase 2 - B2B Pivot and Enterprise Architecture.md  Phase 3 - Deployment and Final Integration.md  Summary.md
Project_checkpoints/.obsidian/: graph.json  workspace.json
agrus-gateway/: Dockerfile  main.go
agrus-sensor/: Cargo.toml
agrus-sensor/src/: main.rs
ai/: __init__.py  api.py  backends.py  engine.py  evaluation.py  models.py  nats_agent.py  replay.py  runner.py  scenarios.py
ai/core/: __init__.py  backends.py  critic.py  engine.py  (+3 more)
contracts/: action_record.schema.json  ai_result.schema.json  decision.schema.json  review_decision.schema.json  scenario.schema.json  unified_event.schema.json
dashboard/: .env.example  Dockerfile  README.md  package-lock.json  package.json
ebpf/: Cargo.toml
gateway/: Dockerfile  go.mod  go.sum  main.go
integration/: fastapi_service.py
report-website/: .env.example  README.md  index.html  package-lock.json  package.json  static-prototype.html
scenarios/: apt_lateral_movement.json  benign_backup.json  container_escape_signal.json  rce_c2_beacon.json  ueba_impossible_travel.json
scripts/: dev_all.sh  generate_ts_contracts.py
security_ai_service/: __init__.py  api.py  backends.py  critic.py  engine.py  nats_agent.py  prompts.py  replay.py  runner.py
sensor/: Cargo.toml  run.sh
test-website/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  static-prototype.html
tests/: test_critic.py  test_engine.py  test_remediation.py  test_replay.py  test_retriever.py  test_scanners.py  test_scenarios.py  test_schema_validation.py
train/: README.md  accelerate_config.yaml  create_synthetic_dataset.py  custom_transformer.py  dataset.py  dataset_schema.md  fine_tune_lora.py  ingest_kali_linux_corpus.py  ingest_mitre.py  model.py  pretrain_custom_model.py  qdrant_cli.py  run.sh  run_accelerate.sh  train.py  train_agrus_foundation.py  train_custom_tokenizer.py
windows-sensor/: Cargo.toml
windows-sensor/src/: main.rs
(+24 files in other folders)
