[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-ai-service"
version = "0.1.0"
description = "Python Security AI service for Argus"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Argus" }]
dependencies = []

[tool.setuptools]
packages = ["security_ai_service"]
