[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-ai-service"
version = "0.1.0"
description = "Python Security AI service for AISOS"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AISOS" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "nats-py",
    "qdrant-client",
    "ollama",
    "peft",
    "accelerate",
    "datasets>=3.0.0",
    "transformers",
    "torch",
    "bitsandbytes",
    "sentence-transformers",
    "huggingface_hub[cli]",
]

[tool.setuptools]
packages = ["ai"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
index-strategy = "unsafe-best-match"

