[package]
name = "agrus-sensor"
version = "0.1.0"
edition = "2021"
description = "AGRUS eBPF Kernel Sensor"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.3.1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4"] }
